clean up : formatting, comments